--- a/신희철/data-access-technology/src/main/resources/application.properties
+++ b/신희철/data-access-technology/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password=
 logging.level.org.springframework.jdbc=debug
 
 #MyBartis
-mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.type-aliases-package=com.study.crispin.domain
 mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.hello.itemservice.repository.mybatis=trace
