--- a/Junsu/SpringMVC/build.gradle
+++ b/Junsu/SpringMVC/build.gradle
@@ -28,7 +28,9 @@ dependencies {
 
 	//JSP 추가 시작
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	implementation 'javax.servlet:jstl'
+	implementation 'jakarta.servlet:jakarta.servlet-api' //스프링부트 3.0 이상
+	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api' //스프링부트 3.0 이상
+	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl' //스프링부트 3.0 이상
 	//JSP 추가 끝
 
 	annotationProcessor 'org.projectlombok:lombok'
